修复年终结余的位置,优化表格页面

--- a/report/report_currency_cash_journal.xml
+++ b/report/report_currency_cash_journal.xml
@@ -29,6 +29,7 @@
                                 </div>
                                 <style>
                                     table.col-xs-12 td{border: 1px solid green}
+                                    tr.comment { font-size: 15px; color: blue;}
                                 </style>
 
                                 <table class='col-xs-12 text-center'>
@@ -81,8 +82,8 @@
                                                     <tr>
                                                         <td t-esc='line.date'/>
                                                         <td t-esc='line.move_id.name'/>
-                                                        <td t-esc='line.name'/>
-                                                        <td t-esc="contrepartie([line.id])[line.id]"/>
+                                                        <td class="text-left" style="padding-left: 5px;" t-esc='line.name'/>
+                                                        <td class="text-left" style="padding-left: 5px;" t-esc="contrepartie([line.id])[line.id]"/>
                                                         <td t-esc="formatLang(line.amount_currency and line.debit or line.credit / abs(line.amount_currency) or 0, digits=4)"/>
                                                         <td t-esc="formatLang(line.debit and line.amount_currency)"/>
                                                         <td t-esc="formatLang(line.debit)"/>
@@ -93,7 +94,7 @@
                                                         <td t-esc="formatLang(final_print('balance'))"/>
                                                     </tr>
                                                 </t>
-                                                <tr>
+                                                <tr class="comment">
                                                     <td/>
                                                     <td/>
                                                     <td>本日合计</td>
@@ -108,7 +109,7 @@
                                                     <td t-esc="formatLang(final_print('balance'))"/>
                                                 </tr>
                                             </t>
-                                            <tr>
+                                            <tr class="comment">
                                                 <td/>
                                                 <td/>
                                                 <td>本期合计</td>
@@ -122,21 +123,21 @@
                                                 <td t-esc="formatLang(final_print('balance_currency'))"/>
                                                 <td t-esc="formatLang(final_print('balance'))"/>
                                             </tr>
-                                            <tr>
-                                                <td/>
-                                                <td/>
-                                                <td>本年累计</td>
-                                                <td/>
-                                                <td/>
-                                                <td t-esc="formatLang(year_print('debit_currency'))"/>
-                                                <td t-esc="formatLang(year_print('debit'))"/>
-                                                <td t-esc="formatLang(year_print('credit_currency'))"/>
-                                                <td t-esc="formatLang(year_print('credit'))"/>
-                                                <td t-esc="get_direction(year_balance())"/>
-                                                <td t-esc="formatLang(final_print('balance_currency'))"/>
-                                                <td t-esc="formatLang(final_print('balance'))"/>
-                                            </tr>
                                         </t>
+                                        <tr class="comment">
+                                            <td/>
+                                            <td/>
+                                            <td>本年累计</td>
+                                            <td/>
+                                            <td/>
+                                            <td t-esc="formatLang(year_print('debit_currency'))"/>
+                                            <td t-esc="formatLang(year_print('debit'))"/>
+                                            <td t-esc="formatLang(year_print('credit_currency'))"/>
+                                            <td t-esc="formatLang(year_print('credit'))"/>
+                                            <td t-esc="get_direction(year_balance())"/>
+                                            <td t-esc="formatLang(final_print('balance_currency'))"/>
+                                            <td t-esc="formatLang(final_print('balance'))"/>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
