--- a/report/report_currency_cash_journal.xml
+++ b/report/report_currency_cash_journal.xml
@@ -57,6 +57,7 @@
 
                                     <tbody>
                                         <tr>
+                                            <t t-esc="final_init(get_initial_balance(data['form']['account_id'][0]))"/>
                                             <td t-esc="data['all_date']['period_start_date_start']"/>
                                             <td/>
                                             <td>期初余额</td>
@@ -84,7 +85,7 @@
                                                         <td t-esc='line.move_id.name'/>
                                                         <td class="text-left" style="padding-left: 5px;" t-esc='line.name'/>
                                                         <td class="text-left" style="padding-left: 5px;" t-esc="contrepartie([line.id])[line.id]"/>
-                                                        <td t-esc="formatLang(line.amount_currency and line.debit or line.credit / abs(line.amount_currency) or 0, digits=4)"/>
+                                                        <td t-esc="formatLang((line.amount_currency and line.debit or line.credit / abs(line.amount_currency)) if line.amount_currency else 0, digits=4)"/>
                                                         <td t-esc="formatLang(line.debit and line.amount_currency)"/>
                                                         <td t-esc="formatLang(line.debit)"/>
                                                         <td t-esc="formatLang(line.credit and abs(line.amount_currency))"/>
@@ -94,7 +95,7 @@
                                                         <td t-esc="formatLang(final_print('balance'))"/>
                                                     </tr>
                                                 </t>
-                                                <tr class="comment">
+                                                <tr t-if="is_show_date" class="comment">
                                                     <td/>
                                                     <td/>
                                                     <td>本日合计</td>
