--- a/views/menuitem.xml
+++ b/views/menuitem.xml
@@ -9,7 +9,7 @@
             <field name="view_mode">tree</field>
             <field name="search_view_id" ref="view_account_periodly_search"/>
             <field name="view_id" ref="view_account_periodly_tree"/>
-            <field name="context">{'group_by':[], 'group_by_no_leaf':0}</field>
+            <field name="context">{'search_default_period_group':1}</field>
         </record>
         <record id="action_china_move_journal_line" model="ir.actions.act_window">
             <field name="name">China Journal Entries</field>
@@ -47,6 +47,26 @@
             <field name="act_window_id" ref="action_china_move_journal_line_easy"/>
         </record>
 
+        <record id="action_oecn_pal_report" model="ir.actions.act_window">
+            <field name="name">利润表</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">accounting.report</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+            <field name="context" eval="{'default_account_report_id':ref('oecn_account_print.financial_report_pal_root'),'oecn_print':'pal'}"/>
+            <field name="view_id" ref="account.accounting_report_view"/>
+        </record>
+
+        <record id="action_oecn_aab_report" model="ir.actions.act_window">
+            <field name="name">资产负债表</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">accounting.report</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+            <field name="context" eval="{'default_account_report_id':ref('oecn_account_print.financial_report_aab_root'),'oecn_print':'aab'}"/>
+            <field name="view_id" ref="account.accounting_report_view"/>
+        </record>
+
         <!-- Add menu item under account/report menu -->
         <menuitem name="China Account" id="menu_china_account" parent="account.menu_finance" sequence="4" groups="account.group_account_user"/>
         <menuitem name="China Entries Easy" id="menu_china_account_move_easy" parent="menu_china_account" sequence="10" action="action_china_move_journal_line_easy"/>
@@ -57,6 +77,8 @@
                   sequence="1"/>
         <menuitem icon="STOCK_PRINT" action="action_oecn_general_report" id="menu_general_ledger" parent="menu_oecn_account_print" sequence="10"/>
         <menuitem icon="STOCK_PRINT" action="action_oecn_detail_report" id="menu_detail_ledger" parent="menu_oecn_account_print" sequence="20"/>
+        <menuitem string="利润表" action="action_oecn_pal_report"  id="menu_gal_report" parent="menu_oecn_account_print"  sequence="30"/>
+        <menuitem string="资产负债表" action="action_oecn_aab_report"  id="menu_aab_report" parent="menu_oecn_account_print"  sequence="40"/>
 
     </data>
 </openerp>
