--- a/wizard/oecn_account_print_wizard_view.xml
+++ b/wizard/oecn_account_print_wizard_view.xml
@@ -14,8 +14,10 @@
                     <group col="4">
                         <field name="company_id"/>
                         <newline/>
-                        <field name="period_from" domain="[('company_id','=',company_id)]"/>
-                        <field name="period_to" domain="[('company_id','=',company_id)]"/>
+                        <field name="fiscalyear" domain="[('company_id','=',company_id)]"/>
+                        <newline/>
+                        <field name="period_from" domain="[('company_id','=',company_id),('fiscalyear_id','=',fiscalyear),('special', '=', False)]"/>
+                        <field name="period_to" domain="[('company_id','=',company_id),('fiscalyear_id','=',fiscalyear),('special', '=', False)]"/>
                     </group>
                     <group string="科目">
                         <field name="account_ids" nolabel="1" domain="[('company_id','=',company_id),('type','not in',['view','closed'])]"/>
@@ -39,13 +41,16 @@
                     <group colspan="4" col="4">
                         <field name="company_id"/>
                         <newline/>
-                        <field name="period_from" domain="[('company_id','=',company_id)]"/>
-                        <field name="period_to" domain="[('company_id','=',company_id)]"/>
+                        <field name="fiscalyear" domain="[('company_id','=',company_id)]"/>
+                        <newline/>
+                        <field name="period_from" domain="[('company_id','=',company_id),('fiscalyear_id','=',fiscalyear),('special', '=', False)]"/>
+                        <field name="period_to" domain="[('company_id','=',company_id),('fiscalyear_id','=',fiscalyear),('special', '=', False)]"/>
                         <field name="account_id" domain="[('company_id','=',company_id),('type','not in',['view','closed'])]"/>
                     </group>
                     <group string="附加条件" col="4">
                         <field name="product"/>
                         <field name="partner"/>
+                        <field name="is_show_date"/>
                     </group>
                     <footer>
                         <button name="print_report" class="oe_highlight" string="Print" type="object"/>
